syntax = "proto3";
package monitor.proto;

message SoftIrq {
    string cpu = 1;   // CPU number
    float hi = 2;     // High priority  高优先级中断时间
    float timer = 3;  // Timer          定时器中断时间
    float net_tx = 4; // Network TX     网络发送中断时间
    float net_rx = 5; // Network RX     网络接收中断时间
    float block = 6;  // Block          块设备中断时间
    float irq_poll = 7; // IRQ poll      中断轮询时间
    float tasklet = 8;  // Tasklet      任务中断时间
    float sched = 9;    // Scheduler    调度器中断时间
    float hrtimer = 10; // HRTimer      高精度定时器中断时间
    float rcu = 11;       // RCU         RCU中断时间
}